新增 API 鉴权功能

--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,7 @@ ALIYUN_TTL=600
 DDNS_RECORDS=[{"rr":"www","ll":"fe80::266e:96ff:fed0:bc74"},{"rr":"blog","ll":"fe80::aabb:ccdd:eeff:1122"}]
 
 # 服务端口
-PORT=3000
+API_PORT=3000
+
+# 访问令牌 (用于 API 安全认证, 建议设置为复杂的随机字符串)
+API_TOKEN=your_secure_token
